crates/decman-lib/snapshots/decman_lib__catalog__proposals__utility__tests__create_provider_service_request.snap
---
source: crates/decman-lib/src/catalog/proposals/utility.rs
expression: "CreateProviderServiceRequest\n{ operator: cid(\"op\"), provider: cid(\"prov\"), }.to_daml_proto().unwrap()"
---
Value {
    sum: Some(
        Record(
            Record {
                record_id: None,
                fields: [
                    RecordField {
                        label: "operator",
                        value: Some(
                            Value {
                                sum: Some(
                                    Party(
                                        "op::1220c4010d6883f367c7f45d55b2449501620130f9b21e96379f17dea455ac7a5892",
                                    ),
                                ),
                            },
                        ),
                    },
                    RecordField {
                        label: "provider",
                        value: Some(
                            Value {
                                sum: Some(
                                    Party(
                                        "prov::1220c4010d6883f367c7f45d55b2449501620130f9b21e96379f17dea455ac7a5892",
                                    ),
                                ),
                            },
                        ),
                    },
                ],
            },
        ),
    ),
}
